# rustchain-bounties

./: Beacon-Integration-Spec.md  HARVEST_NOW.md  HARVEST_REPORT.md  QUICK_ACTION_CHECKLIST.md  SECURITY.md  Security-Audit-Report.md  elyanlabs_tweets.txt  install-rustchain-miner.sh  miner-install.sh  requirements.txt  robots.txt  scan_easy_bounties.sh  sitemap.xml  sitemap_elyanlabs.ai.xml  social-proof-2960.md  social-proof.md  twitter_post.txt
.github/actions/rtc-reward-action/: README.md  action.yml  entrypoint.sh
.github/mcp_server/: README.md  pyproject.toml
.github/mcp_server/rustchain_mcp/: __init__.py
.github/workflows/: bcos.yml  rtc-reward-sample.yml
bcos/: compare.html
bounty-hunter/: apple2_2870_miner.py  gsc_2959.py  seo_2957_audit.py  showcase_2958.py  telegram_2869.py
claims/: bounty-2870-miner-report.md  bounty-elyanlabs-gsc-report.md  bounty-elyanlabs-seo-report.md
community/lore/mtarcure/: the_last_power8.md
docs/: contributions-showcase.md  rustchain-telegram-bot-README.md  seo-audit-elyanlabs.md
docs/upstream-contributions/: CONTRIBUTIONS_SHOWCASE.html
elyanlabs-ai/: robots.txt  sitemap.xml
glassworm-protocol/: requirements.txt
integrations/: agentfolio-beacon-sync.py
multiplier-viz/: index.html
projects/xuanwu-physics-lab/: README.md  gen_video_1.py  gen_video_2.py  gen_video_3.py  main_agent.py  run_submission.py
projects/xuanwu-physics-lab/bottube/: client.py
rtc-reward-action/: README.md  action.yml  entrypoint.js  package.json
rustchain-mcp-server/: pyproject.toml
rustchain-mcp-server/src/rustchain_mcp/: __init__.py  server.py
scripts/: sophia_dashboard.py  sophia_db.py  sophia_inspector.py  sophia_scheduler.py
submissions/: devto-article-2863.md
submissions/2869-telegram-bot/: README.md  bot.py  requirements.txt
submissions/292-xonotic-skins/: README.md
submissions/293-xonotic-sounds/: README.md
submissions/2958-elyanlabs-upstream-showcase/: index.html
submissions/task-2869/telegram-bot/: README.md  bot.py
telegram-bot/: Dockerfile  README.md  bot.py  config.py  docker-compose.yml  requirements.txt  rustchain-telegram-bot.service
telegram-bot/src/: main.rs  rip309.rs
tests/: test_sophia_inspector.py  test_sybil_risk_scorer.py
tools/: rustchain-telegram-bot.py
tools/rustchain-mcp/: README.md  pyproject.toml  requirements.txt
tools/rustchain-mcp/rustchain_mcp/: __init__.py  __main__.py  client.py  server.py  tools.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: bountyBrowser.ts  epochTimer.ts  extension.ts  minerStatus.ts  rustchainApi.ts
