[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-mcp"
version = "0.1.0"
description = "MCP server connecting AI agents to RustChain"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx", "pydantic"]

[project.scripts]
rustchain-mcp = "rustchain_mcp.server:main"
