[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-mcp"
version = "1.0.0"
description = "Model Context Protocol server that connects any AI agent to RustChain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RustChain Contributors", email = "bounty@rustchain.io"}
]
keywords = ["mcp", "model-context-protocol", "rustchain", "ai-agent", "blockchain", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
cli = ["click>=8.0"]

[project.scripts]
rustchain-mcp = "rustchain_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/rustchain-mcp"
Repository = "https://github.com/Scottcjn/rustchain-mcp"
Issues = "https://github.com/Scottcjn/rustchain-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustchain_mcp*"]
