[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustchain-mcp"
version = "0.1.0"
description = "MCP server — connect any AI agent to RustChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "RustChain Contributors" }]
keywords = ["mcp", "model context protocol", "rustchain", "ai agent", "claude code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rustchain-mcp = "rustchain_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/rustchain-bounties"
Repository = "https://github.com/Scottcjn/rustchain-bounties"

[tool.hatch.build.targets.wheel]
packages = ["rustchain_mcp"]
